--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,22 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  display: flex;
+  justify-content: center;
+  min-height: 100vh;
+
+  background-image: url(./assets/afternoon.svg);
+  background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+#root {
+  max-width: 1024px;
+  width: 100%;
+  margin: auto 0px;
+  padding: 0px 1rem;
 }
 
 code {
