--- a/src/styles/app.module.css
+++ b/src/styles/app.module.css
@@ -8,26 +8,68 @@
   background-attachment: fixed;
   background-size: cover; */
 
-  background-image: url(../assets/day.svg);
-  background-attachment: fixed;
-  background-size: cover;
-  background-repeat: no-repeat;
-
-  height: 100%;
+  /* height: 100vh; */
+  /* overflow-y: auto; */
   font-family: "Quicksand", sans-serif;
-  font-size: 18px;
+  font-size: 16px;
+}
+
+.search {
+  padding: 0 24px;
+  color: white;
+
+  backdrop-filter: blur(30px) saturate(200%);
+  -webkit-backdrop-filter: blur(10px) saturate(200%);
+  background-color: rgba(255, 255, 255, 0.4);
+  border-radius: 50px;
+  border: 1px solid rgba(209, 213, 219, 0.3);
+
+  display: flex;
+  align-items: center;
+
+  margin-bottom: 18px;
+}
+
+input {
+  font-family: inherit;
+  font-weight: 300;
+  border: 0;
+  padding: 5px 10px;
+  width: 100%;
+  background: transparent;
+  font-size: 20px;
+  color: white;
+  text-transform: capitalize;
+  outline: none;
+  height: 50px;
+}
+
+input::placeholder {
+  color: #ddd;
+}
+
+.search > svg {
+  width: 20px;
+  cursor: pointer;
 }
 
 .container {
-  height: calc(100vh - 50px);
-  display: grid;
+  /* display: grid;
   place-items: center;
-  flex-direction: column;
   padding: 25px;
+  height: calc(100% - 50px);
+  align-content: space-evenly; */
 }
+
+/* .container > div {
+  margin-bottom: 25px;
+} */
 
 .forecast {
   width: 100%;
   max-width: 1024px;
-  height: 200px;
+  height: 300px;
+  background-color: ivory;
+
+  margin-top: 18px;
 }
