--- a/src/styles/current-weather.module.css
+++ b/src/styles/current-weather.module.css
@@ -1,15 +1,22 @@
 hr {
-  border: 1px solid rgba(255, 255, 255, 0.45);
+  border: 1px double rgba(255, 255, 255, 0.45);
+}
+
+.divider {
+  display: none;
+  border-top: solid 1px rgba(255, 255, 255, 0.45);
+  width: 100%;
+  height: 1px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.45);
+  margin-bottom: 15px;
 }
 
 .current {
   width: calc(100% - 36px);
   max-width: 1024px;
   padding: 18px;
-  font-size: 1.1em;
   font-weight: 500;
-  color: whitesmoke;
-
+  color: white;
   backdrop-filter: blur(30px) saturate(200%);
   -webkit-backdrop-filter: blur(10px) saturate(200%);
   background-color: rgba(255, 255, 255, 0.4);
@@ -17,20 +24,44 @@ hr {
   border: 1px solid rgba(209, 213, 219, 0.3);
 }
 
-.main {
-  font-size: 1.1em;
+.header {
+  font-size: 20px;
   font-weight: 700;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 10px;
+}
+
+.header > svg {
+  height: 20px;
+  cursor: pointer;
+}
+
+.main {
   margin: 30px 20px 0 20px;
   display: flex;
   justify-content: space-between;
 }
 
+.main > .left,
+.right {
+  margin: 10px;
+}
+
+.left {
+  text-transform: capitalize;
+}
+
+.left > p:first-of-type {
+  max-height: 27px;
+  font-size: 18px;
+  font-weight: 500;
+}
+
 .temp {
-  margin: 0;
   font-size: 5em;
   font-weight: 800;
   font-family: "Stick No Bills", sans-serif;
-
   line-height: 160px;
   height: 130px;
 }
@@ -40,24 +71,21 @@ hr {
   align-items: center;
   border-bottom: 1px solid rgba(255, 255, 255, 0.45);
   justify-content: space-evenly;
-  margin-bottom: 5px;
 }
 
 .icon {
-  width: 100vw;
-  max-width: 65px;
+  width: 65px;
 }
 
 .suntiming {
   display: flex;
   justify-content: space-between;
-  margin: 10px 0;
+  margin: 5px 0;
 }
 
 .suntime {
   display: flex;
   flex-direction: column;
-  font-size: 16px;
   font-weight: 300;
 }
 
@@ -69,36 +97,26 @@ hr {
 .suntime > div > .icon {
   max-width: 36px;
 }
+
 .suntime > div > .icon > svg > path {
   stroke: white;
 }
 
-.left {
-  margin: 10px;
-  text-transform: capitalize;
-}
-
-.left > p:first-of-type {
-  max-height: 27px;
-}
-
 .right {
-  margin: 10px;
-  display: flex;
-  flex-direction: column;
   text-align: right;
 }
 
+.right > p:first-of-type {
+  font-size: 18px;
+  font-weight: 500;
+}
+
 .temperatures {
-  margin-bottom: 5px;
-  font-size: 16px;
   font-weight: 300;
-  color: white;
   display: flex;
   align-items: center;
   justify-content: space-between;
   text-align: center;
-
   border-bottom: 1px solid rgba(255, 255, 255, 0.45);
 }
 
@@ -113,23 +131,16 @@ hr {
   align-items: center;
 }
 
-.temperatures > div > div > .icon > svg > path {
-  fill: transparent;
-}
-
 .misc {
   text-align: center;
   margin-top: 5px;
   font-size: 16px;
   font-weight: 300;
-  color: white;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.misc > div {
-  margin: 0 15px;
-}
+
 .misc > div > div {
   display: flex;
   align-items: center;
@@ -153,16 +164,16 @@ sup {
     flex-direction: column;
     align-items: center;
   }
-
   .weather {
     justify-content: space-evenly;
   }
-
   .left {
     text-align: center;
-    border-bottom: 5px double rgba(255, 255, 255, 0.45);
+    /* border-bottom: 5px double rgba(255, 255, 255, 0.45); */
   }
-
+  .divider {
+    display: unset;
+  }
   .right {
     text-align: center;
   }
