--- a/src/styles/spacers.module.css
+++ b/src/styles/spacers.module.css
@@ -3,3 +3,10 @@
   font-weight: 300;
   margin: 32px 0;
 }
+
+@media only screen and (max-width: 374px) {
+  h1 {
+    font-size: 1.6em;
+    text-align: center;
+  }
+}
