--- a/src/styles/app.module.css
+++ b/src/styles/app.module.css
@@ -1,15 +1,4 @@
 .app {
-  /* background-color: #fad961;
-  background-image: linear-gradient(225deg, #fad961 0%, #f76b1c 100%); */
-
-  /* am */
-  /* background-color: #58a2ed;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cpolygon fill='%23ded7c9' points='957 450 539 900 1396 900'/%3E%3Cpolygon fill='%239e9c86' points='957 450 872.9 900 1396 900'/%3E%3Cpolygon fill='%23ddd7c6' points='-60 900 398 662 816 900'/%3E%3Cpolygon fill='%2391907b' points='337 900 398 662 816 900'/%3E%3Cpolygon fill='%23dcd6c2' points='1203 546 1552 900 876 900'/%3E%3Cpolygon fill='%23848370' points='1203 546 1552 900 1162 900'/%3E%3Cpolygon fill='%23dbd6bf' points='641 695 886 900 367 900'/%3E%3Cpolygon fill='%23787764' points='587 900 641 695 886 900'/%3E%3Cpolygon fill='%23dad5bb' points='1710 900 1401 632 1096 900'/%3E%3Cpolygon fill='%236b6a59' points='1710 900 1401 632 1365 900'/%3E%3Cpolygon fill='%23d9d5b8' points='1210 900 971 687 725 900'/%3E%3Cpolygon fill='%235e5e4e' points='943 900 1210 900 971 687'/%3E%3C/svg%3E");
-  background-attachment: fixed;
-  background-size: cover; */
-
-  /* height: 100vh; */
-  /* overflow-y: auto; */
   font-family: "Quicksand", sans-serif;
   font-size: 16px;
 }
@@ -53,18 +42,6 @@ input::placeholder {
   cursor: pointer;
 }
 
-.container {
-  /* display: grid;
-  place-items: center;
-  padding: 25px;
-  height: calc(100% - 50px);
-  align-content: space-evenly; */
-}
-
-/* .container > div {
-  margin-bottom: 25px;
-} */
-
 .forecast {
   width: 100%;
   max-width: 1024px;
@@ -72,4 +49,8 @@ input::placeholder {
   background-color: ivory;
 
   margin-top: 18px;
+}
+
+.disabled {
+  opacity: 0.9;
 }
