--- a/src/components/current-weather/current-weather.module.css
+++ b/src/components/current-weather/current-weather.module.css
@@ -5,8 +5,9 @@ hr {
 .divider {
   display: none;
   border-top: solid 1px rgba(255, 255, 255, 0.45);
+  border-bottom: solid 1px rgba(255, 255, 255, 0.45);
   width: 100%;
-  height: 1px;
+  height: 2px;
   margin: 15px 0;
 }
 
@@ -35,7 +36,7 @@ hr {
 }
 
 .main {
-  margin: 30px 30px 20px;
+  margin: 30px 30px 0;
   display: flex;
   justify-content: space-between;
   position: relative;
@@ -45,18 +46,38 @@ hr {
   text-align: left;
 }
 
-.left > span {
+.left span {
   display: block;
   margin-top: 15px;
 }
 
 .temperature {
+  display: flex;
+}
+
+.minmax {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.minmax > div {
+  display: flex;
+  align-items: center;
+  height: 30px;
+}
+
+.minmax > div > svg {
+  width: 50px;
+}
+
+.temperature > p {
   font-size: 5em;
   font-weight: 800;
   font-family: "Stick No Bills", sans-serif;
 
   line-height: 70px;
-  height: 65px;
+  height: 72px;
 }
 
 .weatherDescription,
@@ -72,7 +93,7 @@ hr {
 }
 
 .suntime {
-  padding-top: 0;
+  padding-top: 8;
 }
 
 .weatherDescription > svg {
@@ -105,7 +126,7 @@ hr {
 }
 
 .suntime > svg {
-  width: 50px;
+  width: 70px;
 }
 
 .suntime > .time {
@@ -118,6 +139,9 @@ hr {
 @media only screen and (max-width: 768px) {
   .current {
     font-size: 16px;
+  }
+  .temperature > p {
+    height: 70px;
   }
 }
 @media only screen and (max-width: 500px) {
