--- a/src/styles/app.module.css
+++ b/src/styles/app.module.css
@@ -1,6 +1,6 @@
 .app {
   font-family: "Quicksand", sans-serif;
-  font-size: 16px;
+  padding: 0 1rem;
 }
 
 .search {
@@ -40,15 +40,6 @@ input::placeholder {
 .search > svg {
   width: 20px;
   cursor: pointer;
-}
-
-.forecast {
-  width: 100%;
-  max-width: 1024px;
-  height: 300px;
-  background-color: ivory;
-
-  margin-top: 18px;
 }
 
 .disabled {
