--- a/src/components/current-weather/current-weather.module.css
+++ b/src/components/current-weather/current-weather.module.css
@@ -17,9 +17,12 @@ hr {
   color: white;
   backdrop-filter: blur(30px) saturate(200%);
   -webkit-backdrop-filter: blur(10px) saturate(200%);
-  background-color: rgba(255, 255, 255, 0.4);
   border-radius: 12px;
-  border: 1px solid rgba(209, 213, 219, 0.3);
+  /* background-color: rgba(255, 255, 255, 0.4);
+  border: 1px solid rgba(209, 213, 219, 0.3); */
+
+  /* background-color: rgba(0, 0, 0, 0.4);
+  border: 1px solid rgba(209, 213, 219, 0.15); */
 }
 
 .header {
